2005-07-13  Sebastien Bacher  <seb128@debian.org>

	* .cvsignore: new file.

2005-07-13  Diego Gonzalez  <diego@pemas.net>

	* gnome-about-me.c (about_me_update_photo): change the maxium width
	  and height permitted on an image, in the hope that it mitigates
	  the problem reported in bug 309643.

2005-07-13  Diego Gonzalez  <diego@pemas.net>

	* e-image-chooser.c (image_drag_data_received_cb): fix image loading
	  when draging an image on the image button, it was getting hanged.
	  (e_image_chooser_init): fix the positioning of the image on the button, 
	  still not perfect but a bit better.
	  
	  Also included in this patch are several cleanups to the code.

	  Fixes bug 309628 and partially bugs 309629 and 309387

	* gnome-about-me.c (about_me_setup_dialog): connect to the changed
	  signal on the image-chooser, so that we are notified when the
	  user changes the image using DnD.
	  (about_me_image_changed_cb): new function, it is called whenever 
	  the user changes the image using D&D.

	  Mark two strings for translation.
	  
2005-07-13  Diego Gonzalez  <diego@pemas.net>

	* gnome-about-me.c (about_me_button_clicked_cb): if 
	  the saving timeout has not yet expired and we click 
	  exit then commit the changes so that we don't loose 
	  any data.

	  Fixes bug 309737.

2005-07-12  Diego Gonzalez  <diego@pemas.net>

	* gnome-about-me.png: this file is no longer used.

2005-07-11  Diego Gonzalez  <diego@pemas.net>

	* e-image-chooser.c: remove gdk_pixbuf_unref calls which are
	  deprecated and use g_object_unref instead

2005-07-11  Diego Gonzalez  <diego@pemas.net>

	* gnome-about-me-password.c: fix some string errors

	  Fixes bug 309951 and bug 309950
2005-07-10  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-about-me.glade:  HIG fixes; fix widget padding,
	use sentence capitalization for text field labels, fix 
	mnemonic conflics, and remove mnemonics from tab labels.

	Also fixes bug 309952
	
2005-07-08  Sebastien Bacher  <seb128@debian.org>
